[gd_scene load_steps=2 format=3 uid="uid://7kyc1i555qma"]

[ext_resource type="Script" uid="uid://d3dy8ofmhg5j7" path="res://scenes/components/hurt_component.gd" id="1_ymqni"]

[node name="HurtComponent" type="Area2D"]
collision_layer = 16
collision_mask = 8
script = ExtResource("1_ymqni")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
